test/files/pos/11484/A_2.java
public class A_2 extends C<String> { }
