test/files/neg/t10260/C.java
public class C<T extends String> {}

